# videoSummarization

./: .gitignore  README.txt  build_and_env_setup.bash  env_setup.bash
compute_pool_pkg/: CMakeLists.txt
compute_pool_pkg/include/compute_pool/: compute_orch.hpp  onnx_yolov3.hpp
compute_pool_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
compute_pool_pkg/install/compute_pool/include/compute_pool/: compute_job.hpp  visibility_control.h
compute_pool_pkg/install/compute_pool/share/ament_index/resource_index/package_run_dependencies/: compute_pool
compute_pool_pkg/install/compute_pool/share/compute_pool/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
compute_pool_pkg/log/: latest_build
compute_pool_pkg/src/compute_pool/: compute_job.cpp  compute_orch.cpp  onnx_yolov3.cpp
injest_pkg/: CMakeLists.txt  package.xml
injest_pkg/src/: injest.cpp
local_stream_pkg/: CMakeLists.txt  package.xml
local_stream_pkg/include/: local_stream.hpp
local_stream_pkg/src/: local_stream.cpp
net_stream_pkg/: CMakeLists.txt  package.xml
net_stream_pkg/include/: net_stream.hpp  visibility_control.h
net_stream_pkg/src/: net_stream.cpp
onnx_pool_pkg/: CMakeLists.txt  CMakeLists_onnx_orch.txt  CMakeLists_onnx_pool.txt  CMakeLists_onnx_yolov3.txt  package.xml  package_onnx_orch.xml  package_onnx_pool.xml  package_onnx_yolov3.xml
onnx_pool_pkg/include/onnx_pool/: onnx_job.hpp  onnx_orch.hpp  onnx_pool.hpp  onnx_yolov3.hpp  visbility_control.h  visibility_control_onnx_orch.h  visibility_control_onnx_pool.h  visibility_control_onnx_yolov3.h
onnx_pool_pkg/src/onnx_pool/: onnx_job.cpp  onnx_orch.cpp  onnx_pool.cpp  onnx_yolov3.cpp
query_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
query_pkg/query_pkg/: query.py
query_pkg/src/: query.cpp
storage_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
storage_pkg/src/: storage.cpp
storage_pkg/storage_pkg/: storage.py
